crates/weft-snapshots/tests/snapshots/react-tsx/example-date-picker.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-date-picker as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _dateType(v: string): "date" | "time" | "datetime" {
  return v === "time" || v === "datetime" ? v : "date";
}

function _dateText(type: string, value: string): string {
  const day = (s: string): boolean => {
    const m = /^(\d{4})-(\d{2})-(\d{2})$/.exec(s);
    if (!m) return false;
    const [year, month, d] = [Number(m[1]), Number(m[2]), Number(m[3])];
    if (year < 1 || month < 1 || month > 12 || d < 1) return false;
    const leap = (year % 4 === 0 && year % 100 !== 0) || year % 400 === 0;
    return d <= [31, leap ? 29 : 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31][month - 1]!;
  };
  const time = (s: string): boolean => /^([01]\d|2[0-3]):[0-5]\d$/.test(s);
  if (type === "date") return day(value) ? value : "";
  if (type === "time") return time(value) ? value : "";
  const [d = "", t = "", ...rest] = value.split("T");
  return rest.length === 0 && day(d) && time(t) ? value : "";
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Delivery">
      <label>
        <span aria-hidden="true">Delivery date</span>
        {(() => {
          const _t = _dateType("date");
          return (
            <input data-weft-id="day" type={_t === "datetime" ? "datetime-local" : _t} aria-label="Delivery date" min={_dateText(_t, "2026-01-01") || undefined} max={_dateText(_t, "2026-12-31") || undefined} value={_dateText(_t, _text(data?.day))} onChange={(_e) => { const _v = _dateText(_t, _e.currentTarget.value); if (_v !== undefined) onChange?.("$.day", _v); _act(actions, { id: "day", action: "delivery.update" }); }} />
          );
        })()}
      </label>
    </main>
  );
}
