crates/weft-snapshots/tests/snapshots/react-tsx/example-dialog.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-dialog as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Files">
      {_on(data?.confirmOpen) && (
        <dialog data-weft-id="confirm" aria-label="Delete file?" open aria-modal="true" onKeyDown={(_e) => { if (_e.key !== "Escape") return; _e.preventDefault(); onChange?.("$.confirmOpen", false); _act(actions, { id: "confirm", action: "dialog.close" }); }}>
          <div data-weft-id="warn">This cannot be undone.</div>
          <div data-weft-slot="actions">
            <button data-weft-id="cancel" type="button" onClick={(_e) => _act(actions, { id: "cancel", action: "dialog.close" })}>Cancel</button>
            <button data-weft-id="ok" type="button" data-variant="danger" onClick={(_e) => _act(actions, { id: "ok", action: "file.delete" })}>Delete</button>
          </div>
        </dialog>
      )}
    </main>
  );
}
