crates/weft-snapshots/tests/snapshots/react-tsx/example-image.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-image as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _url(value: string): string | undefined {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Profile">
      <img data-weft-id="avatar" alt="Profile photo of the user" src={_url(_text(data?.user?.avatar))} />
    </main>
  );
}
