crates/weft-snapshots/tests/snapshots/react-tsx/example-item.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-item as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

type WeftKey = {
  key: string;
  target: unknown;
  currentTarget: { parentElement: HTMLElement | null };
  preventDefault(): void;
};

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e: WeftKey, fire: () => void): void {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Inbox">
      <ol data-weft-id="inbox">
        <li data-weft-id="msg-1" tabIndex={0} onClick={() => _act(actions, { id: "msg-1", action: "inbox.open" })} onKeyDown={(_e) => _press(_e, () => _act(actions, { id: "msg-1", action: "inbox.open" }))}>
          <div data-weft-id="msg-1-from" data-tone="muted">Ana</div>
          <div data-weft-id="msg-1-subject">Welcome aboard</div>
        </li>
      </ol>
    </main>
  );
}
